# OOP

Timirbaev_Ernest_AS-22-04_OOP/: Timirbaev_Defect_Product.cpp  Timirbaev_Defect_Product.h  Timirbaev_Ernest_AS-22-04_OOP.cpp  Timirbaev_Ernest_AS-22-04_OOP.sln  Timirbaev_Ernest_AS-22-04_OOP.vcxproj  Timirbaev_Ernest_AS-22-04_OOP.vcxproj.filters  Timirbaev_Product.cpp  Timirbaev_Product.h  Timirbaev_Utils.h  Timirbaev_Warehouse.cpp  Timirbaev_Warehouse.h  data.txt  data2.txt
Timirbaev_Ernest_AS-22-04_OOP/x64/Debug/: Timirbaev_Ernest_AS-22-04_OOP.exe.recipe  Timirbaev_Ernest_AS-22-04_OOP.vcxproj.FileListAbsolute.txt  vc143.idb
Timirbaev_Ernest_AS-22-04_OOP/x64/Debug/Timirbae.fb239ae4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Timirbaev_Ernest_AS-22-04_OOP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Timirbaev_Ernest_AS-22-04_Qt_project/: CMakeLists.txt  Timirbaev_Utils.h  main.cpp  timirbaev_defect_product.cpp  timirbaev_defect_product.h  timirbaev_ernest_mainwindow.cpp  timirbaev_ernest_mainwindow.h  timirbaev_ernest_mainwindow.ui  timirbaev_product.cpp  timirbaev_product.h  timirbaev_table.cpp  timirbaev_table.h  timirbaev_utils.cpp  timirbaev_warehouse.cpp  timirbaev_warehouse.h
Timirbaev_Ernest_AS-22-04_lab5/: Timirbaev_Defect_Product.cs  Timirbaev_Ernest_AS-22-04_lab5.csproj  Timirbaev_Ernest_AS-22-04_lab5.sln  Timirbaev_Product.cs  Timirbaev_Utils.cs  Timirbaev_Warehouse.cs  Timirbaev_lab5.cs
Timirbaev_Ernest_Qt_lab4/: CMakeLists.txt  Timirbaev_Utils.h  main.cpp  timirbaev_add_dialog.cpp  timirbaev_add_dialog.h  timirbaev_add_dialog.ui  timirbaev_defect_product.cpp  timirbaev_defect_product.h  timirbaev_dialog.cpp  timirbaev_dialog.h  timirbaev_dialog.ui  timirbaev_ernest_mainwindow.cpp  timirbaev_ernest_mainwindow.h  timirbaev_ernest_mainwindow.ui  timirbaev_product.cpp  timirbaev_product.h  timirbaev_table.cpp  timirbaev_table.h  timirbaev_warehouse.cpp  timirbaev_warehouse.h
